recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:4: error: not found: value ypos
      ypos = getY();
      ^FourSquare:7: error: type mismatch;
 found   : Double
 required: Int
  carre(xpos, ypos, 100);
        ^FourSquare:7: error: not found: value ypos
  carre(xpos, ypos, 100);
              ^